# OpenMMO

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.cargo/: config.toml
agent-client/: Cargo.toml
agent-client/data/: config.toml.example  system_prompt.txt
agent-client/data/npcs/rica/: schedule.json
agent-client/src/: claude.rs  driver.rs  main.rs  mcp.rs  monster_ai.rs  openrouter.rs  orchestrator.rs  state.rs
agent-client/src/driver/: combat.rs  execute.rs  mod.rs  prompt.rs
assets/: all_animation.blend  items.blend
client/: MEMO.md  package.json  vite.config.ts
client/public/: extract-grass.html
client/public/models/: grass_1_Object_4.glb  grass_2_Object_6.glb  grass_3_Object_8.glb  grass_4_Object_10.glb  grass_5_Object_12.glb  grass_6_Object_14.glb  grass_7_Object_16.glb  grass_8_Object_18.glb  grass_9_Object_20.glb  grass_meshes_info.json  knight.glb  sword.glb
client/public/models/furniture/: bed.glb  catalog.json
client/public/models/objects/: catalog.json  scroll.glb
client/public/models/vegetation/: tree.glb  tree2.glb
client/public/models/weapons/: goblin_sword.glb  small_sword.glb  spear.glb  sword.glb  torch.glb
client/src/: App.svelte  app.css
client/src/lib/: chat-commands.ts
client/src/lib/components/: CharacterAttributesHud.svelte  CharacterCreateScene.svelte  CharacterCreateScreen.svelte  CharacterPanel.svelte  CharacterPreview.svelte  CharacterSelectScene.svelte  CharacterSelectScreen.svelte  CharacterSlotLabel.svelte  ChatBubble.svelte  ChatPanel.svelte  DamageText.svelte  DamageTextItem.svelte  FPSCounter.svelte  GameHud.svelte  GameScene.svelte  GameTimeWidget.svelte  (+15 more)
data/: items.csv  items.json  monsters.csv
data-src/: items.csv  merchants.csv  world_drop.csv
doc/: AGENT_CLIENT.md  AGENT_CLIENT_QUICKSTART.md  ANIMATION.md  ASSETS.md  HOUSING_SYSTEM.md  MAP_DESIGN.md  NPC_MONSTER_AI.md  REMOTE_AGENT_CLIENT.md  RIVER_SYSTEM.md  RUNTIME_PERFORMANCE.md  TERRAIN_GENERATION.md  TODO.md  WATER_SYSTEM.md  WORLD_BUILDING.md
doc/assets/: items.md  props.md  ui.md
doc/devlog/: 2026-06-10.md  2026-06-20.md  2026-07-13.md  2026-07-16.md  2026-07-17.md  README.md
server/: Cargo.toml
server/src/: api_auth.rs  auth.rs  connection.rs  google_auth.rs  item_defs.rs  main.rs  types.rs  world_config.rs
server/src/game/: character_hp.rs  mod.rs
server/src/game_state/: chat.rs  combat.rs  deals.rs  inventory.rs  mod.rs  monster.rs  passability.rs  player.rs  salary.rs  tests.rs  time.rs  trading.rs
server/src/housing/: mod.rs  routes.rs
server/src/npc_schedule/: mod.rs
server/src/terrain/: coords.rs  defaults.rs  io.rs  mod.rs  routes.rs  tests.rs
shared/src/: character.rs  entity.rs  housing.rs  lib.rs  messages.rs  pathfinding.rs  wasm_api.rs  world.rs  xp.rs
shared/src/dungeon/: mod.rs  tests.rs
shared/src/pathfinding/: astar.rs  cache.rs  mod.rs  query.rs  smooth.rs  stair.rs
shared/src/worldgen/: config.rs  continent.rs  elevation.rs  erosion.rs  grid.rs  growth.rs  mod.rs  noise.rs  rivers.rs  roads.rs  settlements.rs  tile_bake.rs  vegetation.rs
tools/: convert.mjs  import_heightmap.py  package-agent-client.sh  vitePlugin.mjs
tools/blender-scripts/: add_action_to_nla.py  export_animations.py  fix_mixamo_transforms.py
tools/glb-editor/src/: App.svelte
tools/terrain-gen/src/: bake.rs  inspect.rs  main.rs  preview.rs
(+139 files in other folders)
