[package]
name = "agent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
onlinerpg-shared = { path = "../shared" }
onlinerpg-terrain = { path = "../terrain" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"

[build-dependencies]
serde_json = "1.0"
