[package]
name = "onlinerpg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
onlinerpg-shared = { path = "../shared" }
onlinerpg-terrain = { path = "../terrain" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
rand = "0.8"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
axum = "0.8"
tower-http = { version = "0.6", features = ["compression-gzip"] }

[build-dependencies]
serde_json = "1.0"
